Finaliza lógica dos relatórios
